made some ui changes and routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -301,26 +301,31 @@
 <!-- Toolbar -->
 
 <!-- <mat-slider min="1" max="100" step="1" value="50"></mat-slider> -->
-<mat-toolbar color="primary">
+<mat-toolbar color="accent">
   <h1><span class="light">Company</span>INC</h1>
   <span class="spacer"></span>
   <a md-button
   [routerLink]="['home']"
   routerLinkActive="active">HOME</a>
+  <span class="example-spacer"></span>
   <a md-button
   [routerLink]="['about']"
   routerLinkActive="active">ABOUT US</a>
+  <span class="example-spacer"></span>
   <a md-button
-  [routerLink]="['contact']"
+  [routerLink]="['ourCustomers']"
   routerLinkActive="active">OUR CUSTOMERS</a>
+  <span class="example-spacer"></span>
   <a md-button
-  [routerLink]="['contact']"
+  [routerLink]="['ourServices']"
   routerLinkActive="active">OUR SERVICES</a>
 </mat-toolbar>
-<div>
-  <p>Today is {{today | date:'medium'}}</p>
-  <p>Current Toronto temperature is {{weather}}</p>
-</div>`
+<mat-card>
+  <mat-card-content>
+    <p>Today is {{today | date:'medium'}}</p>
+    <p>Current Toronto temperature is {{weather}}</p>
+  </mat-card-content>
+</mat-card>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
