--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -302,7 +302,7 @@
 
 <!-- <mat-slider min="1" max="100" step="1" value="50"></mat-slider> -->
 <mat-toolbar color="accent">
-  <h1><span class="light">Company</span>INC</h1>
+  <h1><span id='title'class="light">CompanyINC</span></h1>
   <span class="spacer"></span>
   <a md-button
   [routerLink]="['home']"
